# tig-challenges

./: .gitignore  Cargo.toml  README.md  datasets_config.json  datasets_config_job_scheduling.json  datasets_config_knapsack.json  datasets_config_vehicle_routing.json  tig.py
.github/workflows/: ci.yml
datasets/job_scheduling/: test.json  tig_generate.sh  train.json
datasets/job_scheduling/download_test_data/: download_scheduleopt_benchmarks.py  scrape_bks.py
datasets/job_scheduling/test/: bks.csv
datasets/knapsack/: example.json  test.json  tig_generate.sh  train.json
datasets/knapsack/download_test_data/: download_disperson_qkp.py  download_standard_qkp.py  download_teamformation_qkp.py
datasets/knapsack/test/Dispersion-QKP/: dispersion_qkp_bks.csv
datasets/knapsack/test/TeamFormation-QKP/: teamformation_qkp_bks.csv
datasets/knapsack/test/standard-QKP/: standard_qkp_bks.csv
datasets/vehicle_routing/: test.json  tig_generate.sh  train.json
datasets/vehicle_routing/download_test_data/: download_homberger_gehring.py  scrape_bks.py
datasets/vehicle_routing/test/: bks.csv
scripts/: run_baseline_test_tig.sh  visualize_baseline_run.py
src/: lib.rs  main.rs  main_evaluator.rs  main_generator.rs  main_solver.rs
src/job_scheduling/: README.md  challenge.rs  mod.rs  solution.rs
src/job_scheduling/algorithm/: mod.rs
src/job_scheduling/baseline/: README.md  fjsp_high.rs  fjsp_medium.rs  flow_shop.rs  hybrid_flow_shop.rs  infra.rs  job_shop.rs  mod.rs  preprocess.rs  solver.rs
src/knapsack/: README.md  challenge.rs  mod.rs  solution.rs
src/knapsack/baseline/: README.md  mod.rs
src/satisfiability/: README.md  algorithm.rs  challenge.rs  mod.rs  solution.rs
src/vehicle_routing/: README.md  challenge.rs  mod.rs  solomon.rs  solution.rs
src/vehicle_routing/baseline/: README.md  config.rs  evolution.rs  gene_pool.rs  mod.rs  operators.rs  route_eval.rs  runner.rs
