[package]
name = "tig-challenges"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
base64 = "0.21"
bincode = "1.3"
blake3 = "1.5.4"
cudarc = { git = "https://github.com/tig-foundation/cudarc.git", branch = "runtime-fuel/cudnn-cublas", features = [
    "cuda-version-from-build-system",
], optional = true }
flate2 = "1.0"
paste = "1.0.15"
nalgebra = "0.33"
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
rand_distr = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
statrs = { version = "0.18.0" }

[features]
hide_verification = []
