[package]
name = "tig-challenges"
version = "0.1.0"
readme = "README.md"
license = "https://github.com/tig-foundation/tig-monorepo/tree/main/docs/agreements/end_user_license_agreement.pdf"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = "4.5.4"
blake3 = "1.5.4"
paste = "1.0.15"
ndarray = "0.15.6"
rand = { version = "0.8.5", default-features = false, features = [
    "std_rng",
    "small_rng",
] }
rand_distr = "0.4.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113" }
statrs = "0.18.0"

[features]
evaluate = []
